--- a/css/styles.css
+++ b/css/styles.css
@@ -4,6 +4,10 @@ body {
     -webkit-font-smoothing: antialiased;
 }
 
+.red {
+  color: #e9425e;
+}
+
 .header {
    padding: 10px 0;
    padding-left: 4px;
