--- a/css/styles.css
+++ b/css/styles.css
@@ -1,175 +1,180 @@
 body { 
-    font-family: Arial, Helvetica, sans-serif;
-    color: #3c3c3c;
-    -webkit-font-smoothing: antialiased;
-    background-color: #ffffff;
-    margin: 0;
+  font-family: Arial, Helvetica, sans-serif;
+  color: #3c3c3c;
+  -webkit-font-smoothing: antialiased;
+  background-color: #ffffff;
+  margin: 0;
 }
 
-#header {
-  padding: 10px 6px;
-  height: 60px;
+/*.main {
+  display: grid;
+  grid-gap: 20px;
+  grid-template-columns: repeat(10, 1fr);
+  grid-template-areas:
+    "header   header   header"
+    "cta      cta      cta"
+    "benefits benefits benefits"
+    "feature  feature  feature"
+    "footer     footer    footer"
+}*/
 
-  /*background-color: rgb(233, 66, 94,0.7)!important;*/
+#header {
+padding: 10px 6px;
+height: 60px;
+/*background-color: rgb(233, 66, 94,0.7)!important;*/
 }
 
 #wave {
-  position: absolute;
-  top: 0;
-  right: 0;
-  width: 62%;
-  z-index: -1;
-  filter: drop-shadow(50px 20px rgb(238, 133, 140, 0.3));
-  
+position: absolute;
+top: 0;
+right: 0;
+width: 62%;
+z-index: -1;
+filter: drop-shadow(50px 20px rgb(238, 133, 140, 0.3));
+
 }
 
 
 
 .logo img {
-  float:left;
-  width: 90px;
-  padding: 10px;
+float:left;
+width: 90px;
+padding: 10px;
 }
 
 
-/*.navbar-container{
-  float:right;
-}*/
-
-
-.nav-item {
-  display: inline-block; 
-  font-size:20px; 
-}
-
-.nav-item a {
-  text-decoration: none;
-  color: white;
-}
-
- .nav-item a:hover{
-  border-bottom: 2px solid white;
+.navbar-container{
+float:right;
 }
 
 
+.item {
+display: inline-block; 
+padding:10px;
+font-size:20px; 
+}
 
-/*#cta-wrapper {
-  display: flex;
-  background-color: rgb(233, 66, 94,0.9)!important;
-  padding: 50px;
+.item a {
+text-decoration: none;
+color: white;
+}
+
+.item a:hover{
+border-bottom: 2px solid white;
+}
+
+
+
+#cta-wrapper {
+display: flex;
+/*background-color: rgb(233, 66, 94,0.9)!important;*/
+padding: 50px;
 }
 
 .cta-container-left {
-  display: flex;
-  float: left;
-  flex: auto;
-  flex-direction: column;
-  margin: 20px;
-  margin-right: 200px;
-  border: 1px solid grey;
-  width: 100%;
-  text-align: left;
-  line-height: 1.2;
-  place-content: center;
-}*/
+display: flex;
+float: left;
+flex: auto;
+flex-direction: column;
+margin: 20px;
+
+/*border: 1px solid grey;*/
+width: 100%;
+text-align: left;
+line-height: 1.2;
+place-content: center;
+}
 
 .cta-title {
-  
-  font-size: 2.5em;
-  color: #3c3c3c;
-  font-weight: bold;
+padding: 10px 0;
+font-size: 2.5em;
+color: #3c3c3c;
+font-weight: bold;
 }
 
 .cta-paragraph {
-  padding: 10px 0;
-  font-size: 1.2em;
-  color: #898084;
-  margin-bottom: 10px;
+padding: 10px 0;
+font-size: 1.2em;
+color: #898084;
+margin-bottom: 10px;
 }
 
 .cta-button {
-  padding: 12px;
-  border-radius: 20px;
-  width: 50%;
-  background-color: #e9425e;
-  color: white;
-  font-size: 1em;
-  font-weight: bold;
-  box-shadow: 0 4px 21px -5px rgb(233, 66, 94, 0.8);
-  margin-top: 10px;
-  border: none;
+padding: 12px;
+border-radius: 20px;
+width: 50%;
+background-color: #e9425e;
+color: white;
+font-size: 1em;
+font-weight: bold;
+box-shadow: 0 4px 21px -5px rgb(233, 66, 94, 0.8);
+margin-top: 10px;
+border: none;
 }
 
-/*.cta-container-right {
-  display: flex;
-  float: right;
-  margin: 20px;
-  /*border: 1px solid grey;
-  width: 100%;
+.cta-container-right {
+display: flex;
+float: right;
+margin: 20px;
+width: 100%;
 place-items: right;
-}*/
-
-.iphone {
-  /*display: flex;*/
-  width: 60%;
-  
-  /*height: auto;*/
-  /*transform: rotate(10deg);*/
-  filter: drop-shadow(0 0 0.3rem #898084);
 }
 
-/*@media (min-width: 576px) { 
-  .iphone {
-    display: flex;
-    width: 50%;
-    
-    filter: drop-shadow(0 0 0.3rem #898084);
-
+/*.iphone {
+display: flex;
+width: 100%;
+height: auto;
+/*transform: rotate(10deg);
+filter: drop-shadow(0 0 0.3rem #898084);
 }*/
 
-/*#benefits  {
-  padding: 50px;
-  
-}
 
+#benefits  {
+padding: 50px;
+
+}
 .benefits-wrapper {
-  display: flex;
-  margin: 20px 0;
+display: flex;
+margin: 20px 0;
+}
+.title-container {
+text-align: center;
+font-size: 2.5em;
+padding-bottom: 20px;
+font-weight: bold;
 
-}*/
-
-.benefits {
-  
-  font-size: 2.1em;
-  font-weight: bold;
+}
+.benefit-container {
+margin: 20px;
+padding: 10px;
+padding-bottom: 30px;
+display: flex;
+flex-direction: column;
+flex: auto;
+text-align: center;
+box-shadow: 0 4px 21px -5px rgba(97, 97,97, 0.23);
+border-radius: 10px;
+line-height: 1.2;
+background-color: white;
 }
 
-.benefit-container {
-  
-  padding: 10px;
-  /*padding-bottom: 30px;*/
-  text-align: center;
-  box-shadow: 0 4px 21px -5px rgba(97, 97,97, 0.23);
-  border-radius: 10px;
-  line-height: 1.2;
-  background-color: white;
-  }
+.benefit-container > div {
+margin: 5px;
+}
 
-  .benefit-container > div {
-    margin: 5px;
-  }
+
 
 
 .icon {
-  height: 35px;
-  object-position: center;
-  filter: drop-shadow(5px 5px rgb(238, 133, 140, 0.3));
+height: 35px;
+object-position: center;
+filter: drop-shadow(5px 5px rgb(238, 133, 140, 0.3));
 }
 
 .benefit-title {
-  padding: 7px 0;
-  font-size: 1.2em;
-  color: #3c3c3c;
+padding: 7px 0;
+font-size: 1.2em;
+color: #3c3c3c;
 }
 
 
@@ -179,104 +184,153 @@ color: #898084;
 padding: 7px 0;
 }
 
-/*#feature {
-  background: lightpink;
-  padding: 50px;
-  display: flex;
-}*/
+#feature {
+/*background: lightpink;*/
+display: grid;
+grid-template-columns: 1fr;
+padding: 50px;
+}
 
 
-
-/*.features-wrapper {
-  display: flex;
-  flex: auto;
-}*/
+.features-wrapper {
+  display: grid;
+  grid-template-columns: 250px 1fr;
+  grid-gap: 10px;
+  align-items: center;
+}
 
 
 
 /*.feature-container-left > div, .feature-container-right > div {
-  margin: 5px;
+margin: 5px;
 }*/
 
 
 .feature-container-left {
-  /*display: flex;
-  float: left;
-  flex: auto;
-  flex-direction: column;*/
-  margin: 20px;
-  /*border: 1px solid grey;*/
-  width: 100%;
-  text-align: right;
-  line-height: 1.2;
-  place-content: center;
-
+ justify-self: end;
 }
 
+/*display: flex;
+float: left;
+flex: auto;
+flex-direction: column;
+margin: 20px;
+/*border: 1px solid grey;
+width: 100%;
+text-align: right;
+line-height: 1.2;
+place-content: center center;
+}*/
+
 /*.image-wrapper {
-  background: #3c3c3c;
-  width: 100%;
-  margin: 20px;
+  display: flex;
+  flex: auto;
+  width: auto;
 }*/
 
 .feature-image-right {
-  /*display: flex;*/
-  width: 100%;
-  height: auto;
+width: 100%;
+
 }
 
+.feature-container-left {
+
+}
 
 .feature-title {
-  /*padding: 10px 0;*/
-  color: #e9425e;
-  font-size: 2.3em;
-  font-weight: bold;
-  text-align: right;
+padding: 10px 0;
+color: #e9425e;
+font-size: 2.3em;
+font-weight: bold;
+
 }
 
 .feature-text {
-  /*padding: 10px 0;*/
-  font-size: 1.2em;
-  text-align: right;
+padding: 10px 0;
+font-size: 1.2em;
+}
+
+/* .header {
+ padding: 10px 0;
+ padding-left: 4px;
+ height: 50px;
+}
+
+nav {
+    float:right;
+  }
+
+.logo img {
+    float:left;
+    width: 90px;
+  
+  }
+
+ul li{
+  display: inline-block; 
+  padding:10px;
+  font-size:20px; 
+}
+a {
+    text-decoration: none;
+    color: #4b4b4b;
+}
+
+a:hover{
+  border-bottom: 2px solid #e9425e;
+}
+.main {
+  max-width: 1000px;
+  margin: 0 auto;
+  padding: 20px;
+}
+.blue {
+color: blue;
+}
+.cta, .iphone {
+display: inline-block;
+width: 400px;
+height: 600px;
+margin: 1px;
+}
+.mockup {
+  transform: rotate(10deg);
+}
+.container {
+  max-width: 1000px;
+  height: 600px;
+} */
+
+#footer-wrapper {
+padding: 10px 6px;
+height: 60px;
 }
 
 
-/*#footer-wrapper {
-  padding: 10px 6px;
-  height: 60px;
-}*/
-
-
-/*.text-wrapper {
-  display: flex;
-  float: left;
-}*/
+.text-wrapper {
+display: flex;
+float: left;
+}
 
 .footer-text {
-  font-size: 1.3em;
-  padding: 10px;
+font-size: 1.3em;
+padding: 10px;
 }
 
 .some-wrapper {
-  display: flex;
-  float: right;
+display: flex;
+float: right;
+
 }
 
 .some-container {
-  padding: 10px;
-  display: block;
-  align-items: center; 
+padding: 10px;
+display: block;
+align-items: center;
+
 }
 
 .some {
-  width: 25px;
-  height: auto;
+width: 25px;
+height: auto;
 }
-
-
-
-
-
-
-
-
